po: fix WiFi to Wi-Fi
This is for translator convenience.

--- a/po/zh_HK.po
+++ b/po/zh_HK.po
@@ -86,7 +86,7 @@ msgid "Used to determine whether settings should be migrated to a new version."
 msgstr "用來決定設定是不是要轉移到新版本上。"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr "禁止建立 Wi-Fi"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -840,8 +840,8 @@ msgstr "乙太網絡 (%s)"
 
 #: ../src/applet-dialogs.c:495
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:502
 #, c-format
@@ -5165,15 +5165,6 @@ msgstr "類型(_T)："
 
 #~ msgid "Could not load wired user interface."
 #~ msgstr "無法載入有線網路使用者介面。"
-
-#~ msgid "Could not load WiFi user interface."
-#~ msgstr "無法載入 WiFi 使用者介面。"
-
-#~ msgid "Could not load WiFi security user interface; missing WiFi setting."
-#~ msgstr "無法載入 WiFi 防護使用者介面；失去 WiFi 設定值。"
-
-#~ msgid "Could not load WiFi security user interface."
-#~ msgstr "無法載入 WiFi 防護使用者介面。"
 
 #~ msgid "Wireless Security"
 #~ msgstr "無線網路防護"
