--- a/po/it.po
+++ b/po/it.po
@@ -102,8 +102,8 @@ msgstr ""
 "versione."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
-msgstr "Disabilita la creazione di WiFi"
+msgid "Disable Wi-Fi Create"
+msgstr "Disabilita la creazione di Wi-Fi"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
 msgid ""
@@ -899,8 +899,8 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:496
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "WiFi 802.11 (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "Wi-Fi 802.11 (%s)"
 
 #: ../src/applet-dialogs.c:503
 #, c-format
