--- a/po/pl.po
+++ b/po/pl.po
@@ -87,7 +87,7 @@ msgstr ""
 "Używane do określenia, czy ustawienia mają zostać migrowane do nowej wersji."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr "Wyłączenie tworzenia sieci Wi-Fi"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -882,7 +882,7 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:496
 #, c-format
-msgid "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
 msgstr "Wi-Fi 802.11 (%s)"
 
 #: ../src/applet-dialogs.c:503
