po: fix WiFi to Wi-Fi
This is for translator convenience.

--- a/po/lt.po
+++ b/po/lt.po
@@ -96,7 +96,7 @@ msgstr ""
 "versiją."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr "Išjungti belaidžių tinklų kūrimo galimybę"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -883,8 +883,8 @@ msgstr "Laidinis tinklas (%s)"
 
 #: ../src/applet-dialogs.c:496
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:503
 #, c-format
