--- a/po/de.po
+++ b/po/de.po
@@ -106,8 +106,8 @@ msgstr ""
 "sollen."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
-msgstr "Das Erstellen von WiFi-Netzen ausschalten"
+msgid "Disable Wi-Fi Create"
+msgstr "Das Erstellen von Wi-Fi-Netzen ausschalten"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
 msgid ""
@@ -906,8 +906,8 @@ msgstr "Ethernet (%s)"
 
 #: ../src/applet-dialogs.c:496
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:503
 #, c-format
