--- a/po/es.po
+++ b/po/es.po
@@ -95,7 +95,7 @@ msgstr ""
 "Se usa para determinar si los ajustes de deben migrar a la nueva versión."
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:11
-msgid "Disable WiFi Create"
+msgid "Disable Wi-Fi Create"
 msgstr "Desactivar la creación de red inalámbrica"
 
 #: ../org.gnome.nm-applet.gschema.xml.in.h:12
@@ -888,8 +888,8 @@ msgstr "Cableada (%s)"
 
 #: ../src/applet-dialogs.c:496
 #, c-format
-msgid "802.11 WiFi (%s)"
-msgstr "802.11 WiFi (%s)"
+msgid "802.11 Wi-Fi (%s)"
+msgstr "802.11 Wi-Fi (%s)"
 
 #: ../src/applet-dialogs.c:503
 #, c-format
