Update Polish translation

--- a/po/pl.po
+++ b/po/pl.po
@@ -11,8 +11,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: network-manager-applet\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-11-26 19:11+0100\n"
-"PO-Revision-Date: 2018-11-26 19:12+0100\n"
+"POT-Creation-Date: 2018-12-06 13:31+0100\n"
+"PO-Revision-Date: 2018-12-06 13:32+0100\n"
 "Last-Translator: Piotr Drąg <piotrdrag@gmail.com>\n"
 "Language-Team: Polish <community-poland@mozilla.org>\n"
 "Language: pl\n"
@@ -31,9 +31,8 @@ msgid "Manage your network connections"
 msgstr "Zarządzanie połączeniami sieciowymi"
 
 #: ../nm-connection-editor.desktop.in.h:1
-#: ../src/connection-editor/nm-connection-list.ui.h:1
-msgid "Network Connections"
-msgstr "Połączenia sieciowe"
+msgid "Advanced Network Configuration"
+msgstr "Zaawansowana konfiguracja sieci"
 
 #: ../nm-connection-editor.desktop.in.h:2
 msgid "Manage and change your network connection settings"
@@ -3476,6 +3475,10 @@ msgstr "Błąd podczas modyfikowania połączenia"
 #, c-format
 msgid "Did not find a connection with UUID “%s”"
 msgstr "Nie odnaleziono połączenia z UUID „%s”"
+
+#: ../src/connection-editor/nm-connection-list.ui.h:1
+msgid "Network Connections"
+msgstr "Połączenia sieciowe"
 
 #: ../src/connection-editor/nm-connection-list.ui.h:2
 msgid "Add a new connection"
