--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
 =======================================================
-network-manager-applet-1.8.20 (not released yet)
+network-manager-applet-1.8.20
 Overview of changes since network-manager-applet-1.8.18
 =======================================================
 
@@ -7,6 +7,14 @@ Overview of changes since network-manager-applet-1.8.18
   default. It can be enabled by passing --with-libnm-gtk to configure
   script. Nobody should need it by now. Users that still use this are
   encouraged to let us know before the libnm-glib support is removed for good.
+* Improve the mobile broadband wizard (issue#15).
+* Fix a bug in the wifi dialog that made widgets disappear when
+  selecting a different device (rh#1665653).
+* Support secret agent hints needed when using IWD as wireless
+  backend.
+* Update Brazilian Portuguese, Catalan, Croatian, Czech, Danish,
+  French, Lithuanian, Polish, Russian, Slovak and Turkish
+  translations.
 
 =======================================================
 network-manager-applet-1.8.18
