po: translations from Red Hat

--- a/po/de.po
+++ b/po/de.po
@@ -2278,11 +2278,11 @@ msgstr ""
 
 #: ../src/connection-editor/ce-page-macsec.ui.h:11
 msgid " The pre-shared Connectivity-association Key Name"
-msgstr ""
+msgstr " Der vorinstallierte Schlüsselname der Connectivity-Zuordnung"
 
 #: ../src/connection-editor/ce-page-macsec.ui.h:12
 msgid "The pre-shared Connectivity Association Key"
-msgstr ""
+msgstr "Der zuvor freigegebene Connectivity Association Key"
 
 #: ../src/connection-editor/ce-page-macsec.ui.h:13
 msgid ""
