--- a/po/ja.po
+++ b/po/ja.po
@@ -1085,18 +1085,17 @@ msgid "Show PIN/PUK codes"
 msgstr "PIN/PUK コードを表示"
 
 #: ../src/applet-vpn-request.c:201
-#, fuzzy
 msgid "Connection had no VPN setting"
-msgstr "接続を削除できません"
+msgstr "接続には VPN 設定がありませんでした"
 
 #: ../src/applet-vpn-request.c:251
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to write connection to VPN UI: %s (%d)"
-msgstr "接続のアクティベートに失敗しました"
+msgstr "VPN UI への接続の書き込みに失敗しました: %s (%d)"
 
 #: ../src/applet-vpn-request.c:259
 msgid "Failed to write connection to VPN UI: incomplete write"
-msgstr ""
+msgstr "VPN UI への接続の書き込みに失敗しました: 不完全な書き込み"
 
 #: ../src/connection-editor/ce-ip4-routes.ui.h:3
 #: ../src/connection-editor/ce-ip6-routes.ui.h:3
