--- a/po/da.po
+++ b/po/da.po
@@ -18,18 +18,17 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: NetworkManager\n"
-"Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/network-manager-applet/"
-"issues\n"
+"Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/network-manager-"
+"applet/issues\n"
 "POT-Creation-Date: 2019-02-27 18:32+0000\n"
-"PO-Revision-Date: 2019-03-06 18:04+0100\n"
-"Last-Translator: Alan Mortensen <alanmortensen.am@gmail.com>\n"
+"PO-Revision-Date: 2019-03-04 15:08+0200\n"
+"Last-Translator: scootergrisen\n"
 "Language-Team: Danish <dansk@dansk-gruppen.dk>\n"
 "Language: da\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.0.6\n"
 
 #: nm-applet.desktop.in:3 src/applet.c:3198
 msgid "Network"
@@ -43,7 +42,6 @@ msgstr "Håndtér dine netværksforbindelser"
 msgid "nm-device-wireless"
 msgstr "nm-device-wireless"
 
-# Skal raw oversættes?
 #: nm-connection-editor.desktop.in:3
 msgid "Advanced Network Configuration"
 msgstr "Avanceret netværkskonfiguration"
@@ -113,8 +111,9 @@ msgstr ""
 "ny version."
 
 #: org.gnome.nm-applet.gschema.xml.in:31
+#| msgid "Disable Wi-Fi Create"
 msgid "Disable WiFi Create"
-msgstr "Afbryd oprettelse af wi-fi-forbindelse"
+msgstr "Deaktivér oprettelse af WiFi"
 
 # Skal "true" oversættes? Senere oversættes "false" ikke.
 #: org.gnome.nm-applet.gschema.xml.in:32
@@ -322,7 +321,7 @@ msgid ""
 "The VPN connection “%s” failed because the VPN service stopped unexpectedly."
 msgstr ""
 "\n"
-"VPN-forbindelsen “%s”  fejlede, fordi VPN-tjenesten stoppede uventet."
+"VPN-forbindelsen “%s” fejlede, fordi VPN-tjenesten stoppede uventet."
 
 #: src/applet.c:904
 #, c-format
@@ -361,7 +360,7 @@ msgid ""
 "The VPN connection “%s” failed because the VPN service failed to start."
 msgstr ""
 "\n"
-"VPN-forbindelsen “%s”  fejlede, fordi VPN-tjenestens opstart fejlede."
+"VPN-forbindelsen “%s” fejlede, fordi VPN-tjenestens opstart fejlede."
 
 #: src/applet.c:912
 #, c-format
@@ -370,7 +369,7 @@ msgid ""
 "The VPN connection “%s” failed because there were no valid VPN secrets."
 msgstr ""
 "\n"
-"VPN-forbindelsen “%s”  fejlede, fordi der ikke fandtes nogen gyldige VPN-"
+"VPN-forbindelsen “%s” fejlede, fordi der ikke fandtes nogen gyldige VPN-"
 "koder."
 
 #: src/applet.c:914
@@ -423,7 +422,7 @@ msgid ""
 "%s"
 msgstr ""
 "\n"
-"VPN-forbindelsen “%s”  fejlede, fordi VPN-tjenestens opstart fejlede.\n"
+"VPN-forbindelsen “%s” fejlede, fordi VPN-tjenestens opstart fejlede.\n"
 "\n"
 "%s"
 
@@ -890,14 +889,17 @@ msgid "Subnet Mask"
 msgstr "Undernetmaske"
 
 #: src/applet-dialogs.c:439
+#| msgid "_Primary"
 msgid "Primary DNS"
 msgstr "Primær DNS"
 
 #: src/applet-dialogs.c:439
+#| msgid "Secondary DNS:"
 msgid "Secondary DNS"
 msgstr "Sekundær DNS"
 
 #: src/applet-dialogs.c:439
+#| msgid "Ternary DNS:"
 msgid "Tertiary DNS"
 msgstr "Tertiær DNS"
 
@@ -947,6 +949,7 @@ msgid "Speed"
 msgstr "Hastighed"
 
 #: src/applet-dialogs.c:584
+#| msgid "Security:"
 msgid "Security"
 msgstr "Sikkerhed"
 
@@ -969,7 +972,6 @@ msgstr "IPv6"
 msgid "VPN Type"
 msgstr "VPN-type"
 
-# gateway?
 #: src/applet-dialogs.c:796
 msgid "VPN Gateway"
 msgstr "VPN-gateway"
@@ -1019,9 +1021,9 @@ msgstr "Websted for Netværkshåndtering"
 #: src/applet-dialogs.c:1064
 msgid "translator-credits"
 msgstr ""
-"# David Nielsen <dnielsen@breakmygentoo.net>, 2004.\n"
-"# Martin Willemoes Hansen <mwh@sysrq.dk>, 2004.\n"
-"# Lasse Bang Mikkelsen <lbm@fatalerror.dk>, 2005, 06.\n"
+"David Nielsen <dnielsen@breakmygentoo.net>, 2004.\n"
+"Martin Willemoes Hansen <mwh@sysrq.dk>, 2004.\n"
+"Lasse Bang Mikkelsen <lbm@fatalerror.dk>, 2005, 06.\n"
 "Peter Bach <bach.peter@gmail.com>, 2007.\n"
 "Mads Bille Lundby <lundbymads@gmail.com>, 2009.\n"
 "Kim Iskov <kimiskov@gmail.com>, 2010, 2010.\n"
@@ -1299,14 +1301,13 @@ msgstr ""
 "En IP-adresse eller en kommaadskilt liste af IP-adresser, der skal kigges "
 "efter når forbindelsesstatus kontrolleres."
 
-# ???
 #: src/connection-editor/ce-page-bond.ui:373
 msgid "Link _up delay"
-msgstr "Forbindelsens _op-ventetid"
+msgstr "Ventetid når forbindelsen er _oppe"
 
 #: src/connection-editor/ce-page-bond.ui:387
 msgid "Link _down delay"
-msgstr "Forbindelsens _ned-ventetid"
+msgstr "Ventetid når forbindelsen er _nede"
 
 #: src/connection-editor/ce-page-bond.ui:481
 msgid "_Primary"
@@ -1584,7 +1585,6 @@ msgstr "Indstillinger …"
 msgid "Priority Groups"
 msgstr "Prioritetsgrupper"
 
-# ?
 #: src/connection-editor/ce-page-dcb.ui:487
 #: src/connection-editor/ce-page-dcb.ui:535
 msgid "Fabric"
@@ -1681,7 +1681,6 @@ msgstr "7"
 msgid "Traffic Class"
 msgstr "Trafikklasse"
 
-# ?
 #: src/connection-editor/ce-page-dcb.ui:1473
 msgid "Strict Bandwidth"
 msgstr "Streng båndbredde"
@@ -2608,16 +2607,15 @@ msgstr ""
 msgid "_Link watcher"
 msgstr "_Linkovervågning"
 
-# ???
 #: src/connection-editor/ce-page-team-port.ui:431
 #: src/connection-editor/ce-page-team.ui:1157
 msgid "_Up delay"
-msgstr "_Op-ventetid"
+msgstr "Ventetid ved _oppe"
 
 #: src/connection-editor/ce-page-team-port.ui:446
 #: src/connection-editor/ce-page-team.ui:1172
 msgid "_Down delay"
-msgstr "_Ned-ventetid"
+msgstr "Ventetid ved _nede"
 
 #: src/connection-editor/ce-page-team-port.ui:461
 #: src/connection-editor/ce-page-team.ui:1187
@@ -3682,7 +3680,6 @@ msgstr "Ethernetforbindelse %d"
 msgid "Default"
 msgstr "Standard"
 
-# Er firewalld en stavefejl?
 #: src/connection-editor/page-general.c:56
 msgid ""
 "The zone defines the trust level of the connection. Default is not a regular "
@@ -4431,7 +4428,7 @@ msgstr "Vælg et %s-certifikat"
 #: src/libnma/nma-pkcs11-cert-chooser.c:402
 #, c-format
 msgid "%s certificate _password"
-msgstr "Adgangs_kode for %s-certifikat"
+msgstr "Adgangs_kode til %s-certifikat"
 
 #: src/libnma/nma-pkcs11-cert-chooser-dialog.c:255
 msgid "Error logging in: "
