Updated Spanish translation

--- a/po/es.po
+++ b/po/es.po
@@ -8,18 +8,18 @@
 # Lucas Vieites Fariña <lucas@asixinformatica.com>, 2005, 2006.
 # Gladys Guerrero  <gguerrer@redhat.com>, 2010.
 # Jorge González <jorgegonz@svn.gnome.org>, 2007, 2008, 2009, 2010, 2011.
-# Daniel Mustieles <daniel.mustieles@gmail.com>, 2010-2019.
 # Rodrigo Lledó <rodhos92@gmail.com>, 2019.
+# Daniel Mustieles <daniel.mustieles@gmail.com>, 2010-2019.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: networkmanager-applet.master\n"
-"Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/network-manager-"
-"applet/\n"
-"POT-Creation-Date: 2019-05-29 10:49+0200\n"
-"PO-Revision-Date: 2019-05-16 10:27+0200\n"
-"Last-Translator: Rodrigo Lledó <rodhos92@gmail.com>\n"
-"Language-Team: Español <gnome-es-list@gnome.org>\n"
+"Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/network-manager-applet/"
+"issues\n"
+"POT-Creation-Date: 2019-05-29 09:07+0000\n"
+"PO-Revision-Date: 2019-06-19 12:38+0200\n"
+"Last-Translator: Daniel Mustieles <daniel.mustieles@gmail.com>\n"
+"Language-Team: es <gnome-es-list@gnome.org>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -38,7 +38,7 @@ msgstr "Gestione sus conexiones de red"
 
 #: nm-applet.desktop.in:5
 msgid "nm-device-wireless"
-msgstr ""
+msgstr "nm-device-wireless"
 
 #: nm-connection-editor.desktop.in:3
 msgid "Advanced Network Configuration"
@@ -50,7 +50,7 @@ msgstr "Gestione y cambie sus ajustes de la conexión de red"
 
 #: nm-connection-editor.desktop.in:5
 msgid "preferences-system-network"
-msgstr ""
+msgstr "preferences-system-network"
 
 #: org.gnome.nm-applet.gschema.xml.in:6
 msgid "Disable connected notifications"
@@ -4290,9 +4290,8 @@ msgid "Set up a Mobile Broadband Connection"
 msgstr "Configurar una conexión de banda ancha móvil"
 
 #: src/libnma/nma-mobile-wizard.ui:189
-#, fuzzy
 msgid "Country or region:"
-msgstr "País o región"
+msgstr "País o región:"
 
 #: src/libnma/nma-mobile-wizard.ui:229 src/libnm-gtk/nm-mobile-wizard.c:1127
 msgid "Choose your Provider’s Country or Region"
