--- a/po/fr.po
+++ b/po/fr.po
@@ -1,7 +1,7 @@
 # French translation of network-manager-applet.
 # Copyright (C) 2004-2019 The GNOME Foundation.
 # This file is distributed under the same license as the network-manager-applet package.
-#
+# 
 # Raphaël Tournoy <lexpas@free.fr>, 2004.
 # Stéphane Raimbault <stephae.raimbault@gmail.com>, 2006-2008.
 # Claude Paroz <claude@2xlibre.net>, 2007-2019.
@@ -12,21 +12,22 @@
 # Bruno Brouard <annoa.b@gmail.com>, 2010-2012.
 # Alain Lojewski <allomervan@gmail.com>, 2013-2014.
 # Yvan Masson <yvan.masson@openmailbox.org>, 2017.
-#
+# croe <croe@redhat.com>, 2019. #zanata
+# ljanda <ljanda@redhat.com>, 2019. #zanata
 msgid ""
 msgstr ""
-"Project-Id-Version: fr\n"
-"Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/network-manager-"
-"applet/\n"
+"Project-Id-Version: network-manager-applet 1.8.22\n"
+"Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/network-manager-applet/\n"
 "POT-Creation-Date: 2019-07-31 17:38+0200\n"
-"PO-Revision-Date: 2019-01-15 14:51+0100\n"
-"Last-Translator: Claude Paroz <claude@2xlibre.net>\n"
-"Language-Team: GNOME French TEAM <gnomefr@traduc.org>\n"
-"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"PO-Revision-Date: 2019-08-14 11:37+0000\n"
+"Last-Translator: croe <croe@redhat.com>\n"
+"Language-Team: GNOME French TEAM <gnomefr@traduc.org>\n"
+"Language: fr\n"
 "Plural-Forms: nplurals=2; plural=n>1;\n"
+"X-Generator: Zanata 4.6.2\n"
 
 #: nm-applet.desktop.in:3 src/applet.c:3196 src/applet-dialogs.c:737
 #: src/libnma/nma-bar-code-widget.c:144
@@ -39,7 +40,7 @@ msgstr "Gérer vos connexions réseau"
 
 #: nm-applet.desktop.in:5
 msgid "nm-device-wireless"
-msgstr ""
+msgstr "nm-device-wireless"
 
 #: nm-connection-editor.desktop.in:3
 msgid "Advanced Network Configuration"
@@ -51,14 +52,15 @@ msgstr "Gérer et modifier les paramètres des connexions réseau"
 
 #: nm-connection-editor.desktop.in:5
 msgid "preferences-system-network"
-msgstr ""
+msgstr "preferences-system-network"
 
 #: org.gnome.nm-applet.gschema.xml.in:6
 msgid "Disable connected notifications"
 msgstr "Désactiver les notifications de connexion"
 
 #: org.gnome.nm-applet.gschema.xml.in:7
-msgid "Set this to true to disable notifications when connecting to a network."
+msgid ""
+"Set this to true to disable notifications when connecting to a network."
 msgstr ""
 "Définir ce paramètre à vrai (true) pour désactiver les notifications lors de "
 "la connexion à un réseau."
@@ -102,13 +104,13 @@ msgid "Stamp"
 msgstr "Marque"
 
 #: org.gnome.nm-applet.gschema.xml.in:27
-msgid "Used to determine whether settings should be migrated to a new version."
+msgid ""
+"Used to determine whether settings should be migrated to a new version."
 msgstr ""
 "Sert à déterminer si les paramètres doivent être migrés dans une nouvelle "
 "version."
 
 #: org.gnome.nm-applet.gschema.xml.in:31
-#, fuzzy
 msgid "Disable WiFi Create"
 msgstr "Désactiver la création Wi-Fi"
 
@@ -124,7 +126,8 @@ msgid "Show the applet in notification area"
 msgstr "Afficher l'applet dans la zone de notification"
 
 #: org.gnome.nm-applet.gschema.xml.in:37
-msgid "Set to FALSE to disable displaying the applet in the notification area."
+msgid ""
+"Set to FALSE to disable displaying the applet in the notification area."
 msgstr ""
 "Définir ce paramètre à faux (false) pour désactiver l'affichage de l'applet "
 "dans la zone de notification."
@@ -349,6 +352,7 @@ msgstr ""
 msgid ""
 "\n"
 "The VPN connection “%s” failed because the VPN service did not start in time."
+""
 msgstr ""
 "\n"
 "La connexion VPN « %s » a échoué car le service VPN n'a pas démarré à temps."
@@ -373,8 +377,7 @@ msgstr ""
 
 #: src/applet.c:914
 #, c-format
-msgid ""
-"\n"
+msgid "\n"
 "The VPN connection “%s” failed because of invalid VPN secrets."
 msgstr ""
 "\n"
@@ -382,21 +385,17 @@ msgstr ""
 
 #: src/applet.c:919
 #, c-format
-msgid ""
-"\n"
+msgid "\n"
 "The VPN connection “%s” failed."
-msgstr ""
-"\n"
+msgstr "\n"
 "La connexion VPN « %s » a échoué."
 
 #: src/applet.c:946
 #, c-format
-msgid ""
-"VPN connection has been successfully established.\n"
+msgid "VPN connection has been successfully established.\n"
 "\n"
 "%s\n"
-msgstr ""
-"La connexion VPN a été établie avec succès.\n"
+msgstr "La connexion VPN a été établie avec succès.\n"
 "\n"
 "%s\n"
 
@@ -427,13 +426,11 @@ msgstr ""
 
 #: src/applet.c:1005
 #, c-format
-msgid ""
-"\n"
+msgid "\n"
 "The VPN connection “%s” failed to start.\n"
 "\n"
 "%s"
-msgstr ""
-"\n"
+msgstr "\n"
 "Le démarrage de la connexion VPN « %s » a échoué.\n"
 "\n"
 "%s"
@@ -889,18 +886,16 @@ msgid "Subnet Mask"
 msgstr "Masque de sous-réseau "
 
 #: src/applet-dialogs.c:440
-#, fuzzy
 msgid "Primary DNS"
-msgstr "_Principal"
+msgstr "DNS Principal"
 
 #: src/applet-dialogs.c:440
-#, fuzzy
 msgid "Secondary DNS"
-msgstr "Mot de passe _secondaire :"
+msgstr "DNS Secondaire"
 
 #: src/applet-dialogs.c:440
 msgid "Tertiary DNS"
-msgstr ""
+msgstr "DNS Tertiaire"
 
 #: src/applet-dialogs.c:519
 #, c-format
@@ -948,9 +943,8 @@ msgid "Speed"
 msgstr "Vitesse "
 
 #: src/applet-dialogs.c:616
-#, fuzzy
 msgid "Security"
-msgstr "Sécurité :"
+msgstr "Sécurité"
 
 #. --- IPv4 ---
 #: src/applet-dialogs.c:641 src/applet-dialogs.c:904
@@ -972,9 +966,8 @@ msgid "Hotspot"
 msgstr "Hotspot"
 
 #: src/applet-dialogs.c:748 src/libnma/nma-bar-code-widget.c:161
-#, fuzzy
 msgid "Password"
-msgstr "Mot de passe :"
+msgstr "Mot de passe"
 
 #: src/applet-dialogs.c:878
 msgid "VPN Type"
@@ -1186,7 +1179,8 @@ msgstr "Ig_norer automatiquement les routes obtenues"
 #: src/connection-editor/ce-ip4-routes.ui:172
 #: src/connection-editor/ce-ip6-routes.ui:172
 msgid "_Use this connection only for resources on its network"
-msgstr "_Utiliser cette connexion uniquement pour les ressources de son réseau"
+msgstr ""
+"_Utiliser cette connexion uniquement pour les ressources de son réseau"
 
 #: src/connection-editor/ce-ip4-routes.ui:177
 #: src/connection-editor/ce-ip6-routes.ui:177
@@ -1494,8 +1488,8 @@ msgid ""
 msgstr ""
 "L'adresse MAC saisie ici est utilisée en tant qu'adresse matérielle du "
 "périphérique réseau pour lequel cette connexion est activée. Cette "
-"fonctionnalité est connue sous le nom de clonage ou usurpation MAC. "
-"Exemple : 00:11:22:33:44:55"
+"fonctionnalité est connue sous le nom de clonage ou usurpation MAC. Exemple :"
+" 00:11:22:33:44:55"
 
 #: src/connection-editor/ce-page.c:341
 msgid "MAC address"
@@ -2750,6 +2744,7 @@ msgstr ""
 #: src/connection-editor/ce-page-team.ui:1410
 msgid ""
 "The delay between the link going down and the runner being notified about it."
+""
 msgstr ""
 "Délai entre l'interruption du lien et la notification de cet évènement à "
 "l'exécuteur."
@@ -2763,6 +2758,7 @@ msgstr "L'intervalle entre l'envoi de chaque requête."
 #: src/connection-editor/ce-page-team.ui:1436
 msgid ""
 "The delay between link watch initialization and the first request being sent."
+""
 msgstr ""
 "Délai entre l'initialisation de la surveillance des liens et l'envoi de la "
 "première requête."
@@ -2995,7 +2991,8 @@ msgstr ""
 "En dixièmes de seconde. Intervalle périodique entre les rééquilibrages."
 
 #: src/connection-editor/ce-page-team.ui:1063
-msgid "Name of active Tx balancer. Active Tx balancing is disabled by default."
+msgid ""
+"Name of active Tx balancer. Active Tx balancing is disabled by default."
 msgstr ""
 "Nom du balanceur Tx actif. La balance Tx active est désactivée par défaut."
 
@@ -3376,8 +3373,8 @@ msgstr ""
 
 #: src/connection-editor/nm-connection-editor.c:742
 msgid ""
-"Warning: the connection contains some properties not supported by the "
-"editor. They will be cleared upon save."
+"Warning: the connection contains some properties not supported by the editor."
+" They will be cleared upon save."
 msgstr ""
 "Avertissement : la connexion contient des propriétés non prises en charge "
 "par l'éditeur. Elles seront supprimées au moment de l'enregistrement."
@@ -3420,8 +3417,8 @@ msgstr "_Ré-étiqueter"
 
 #: src/connection-editor/nm-connection-editor.ui:320
 msgid ""
-"The following files are not labelled for use with certificate "
-"authentication. Do you wish to adjust the labels?"
+"The following files are not labelled for use with certificate authentication."
+" Do you wish to adjust the labels?"
 msgstr ""
 "Les fichiers suivants ne sont pas étiquetés pour être utilisés avec "
 "l'authentification par certificat. Souhaitez-vous ajuster les étiquettes ?"
@@ -3635,7 +3632,7 @@ msgstr "Connexion pont %d"
 
 #. Translators: a "Bridge Port" is a network
 #. * device that is part of a bridge.
-#.
+#. 
 #: src/connection-editor/page-bridge-port.c:105
 msgid "Bridge Port"
 msgstr "Port du pont"
@@ -3668,13 +3665,13 @@ msgstr "Connexion DSL %d"
 #: src/connection-editor/page-ethernet.c:81
 msgid ""
 "This option locks this connection to the network device specified either by "
-"its interface name or permanent MAC or both. Examples: “em1”, "
-"“3C:97:0E:42:1A:19”, “em1 (3C:97:0E:42:1A:19)”"
+"its interface name or permanent MAC or both. Examples: “em1”, “3C:97:0E:42:"
+"1A:19”, “em1 (3C:97:0E:42:1A:19)”"
 msgstr ""
 "Cette option verrouille cette connexion sur le périphérique réseau spécifié "
 "soit par son nom d'interface, soit par son adresse MAC permanente, soit par "
-"les deux. Exemples : « em1 », « 3C:97:0E:42:1A:19 », "
-"« em1 (3C:97:0E:42:1A:19) »"
+"les deux. Exemples : « em1 », « 3C:97:0E:42:1A:19 », « em1 (3C:97:0E:42:1A:"
+"19) »"
 
 #: src/connection-editor/page-ethernet.c:262
 msgid "ignored"
@@ -3728,14 +3725,14 @@ msgstr "Impossible de charger l'interface utilisateur principale."
 msgid ""
 "This option locks this connection to the network device specified either by "
 "its interface name or permanent MAC or both. Examples: “ib0”, “80:00:00:48:"
-"fe:80:00:00:00:00:00:00:00:02:c9:03:00:00:0f:65”, “ib0 (80:00:00:48:"
-"fe:80:00:00:00:00:00:00:00:02:c9:03:00:00:0f:65)”"
+"fe:80:00:00:00:00:00:00:00:02:c9:03:00:00:0f:65”, “ib0 (80:00:00:48:fe:80:00:"
+"00:00:00:00:00:00:02:c9:03:00:00:0f:65)”"
 msgstr ""
 "Cette option verrouille cette connexion sur le périphérique réseau spécifié "
 "soit par son nom d'interface, soit par son adresse MAC permanente, soit par "
-"les deux. Exemples: « ib0 », « 80:00:00:48:fe:80:00:00:00:00:00:00:00:02:"
-"c9:03:00:00:0f:65 », « ib0 (80:00:00:48:fe:80:00:00:00:00:00:00:00:02:"
-"c9:03:00:00:0f:65) »"
+"les deux. Exemples: « ib0 », « 80:00:00:48:fe:80:00:00:00:00:00:00:00:02:c9:"
+"03:00:00:0f:65 », « ib0 (80:00:00:48:fe:80:00:00:00:00:00:00:00:02:c9:03:00:"
+"00:0f:65) »"
 
 #: src/connection-editor/page-infiniband.c:148
 msgid "Could not load InfiniBand user interface."
@@ -4011,7 +4008,7 @@ msgstr "Connexion en équipe %d"
 
 #. Translators: a "Team Port" is a network
 #. * device that is part of a team.
-#.
+#. 
 #: src/connection-editor/page-team-port.c:652
 msgid "Team Port"
 msgstr "Port d'équipe"
@@ -4022,7 +4019,7 @@ msgstr "Impossible de charger l'interface utilisateur du port d'équipe."
 
 #. Translators: the first %s is a device name (eg, "em1"), the
 #. * second is a connection name (eg, "Auto Ethernet").
-#.
+#. 
 #: src/connection-editor/page-vlan.c:413
 #, c-format
 msgid "%s (via “%s”)"
@@ -4093,13 +4090,13 @@ msgstr ""
 #: src/connection-editor/page-wifi.c:88
 msgid ""
 "This option locks this connection to the network device specified either by "
-"its interface name or permanent MAC or both. Examples: “wlan0”, "
-"“3C:97:0E:42:1A:19”, “wlan0 (3C:97:0E:42:1A:19)”"
+"its interface name or permanent MAC or both. Examples: “wlan0”, “3C:97:0E:42:"
+"1A:19”, “wlan0 (3C:97:0E:42:1A:19)”"
 msgstr ""
 "Cette option verrouille cette connexion sur le périphérique réseau spécifié "
 "ici soit par son nom d'interface, soit par son adresse MAC permanente, soit "
-"les deux. Exemples : « wlan0 », « 3C:97:0E:42:1A:19 », « wlan0 "
-"(3C:97:0E:42:1A:19) »"
+"les deux. Exemples : « wlan0 », « 3C:97:0E:42:1A:19 », « wlan0 (3C:97:0E:42:"
+"1A:19) »"
 
 #: src/connection-editor/page-wifi.c:197
 #, c-format
@@ -4191,8 +4188,7 @@ msgstr "Impossible d'exporter la connexion VPN"
 
 #: src/connection-editor/vpn-helpers.c:174
 #, c-format
-msgid ""
-"The VPN connection “%s” could not be exported to %s.\n"
+msgid "The VPN connection “%s” could not be exported to %s.\n"
 "\n"
 "Error: %s."
 msgstr ""
@@ -4222,7 +4218,7 @@ msgstr "_Fermer"
 
 #: src/libnma/nma-bar-code-widget.ui:36
 msgid "Scan with your phone or <a href=\"nma:print\">Print</a>"
-msgstr ""
+msgstr "Scanner avec votre portable ou  <a href=\"nma:print\">Print</a>"
 
 #: src/libnma/nma-file-cert-chooser.c:108
 #: src/libnma/nma-pkcs11-cert-chooser.c:152
@@ -4331,9 +4327,8 @@ msgid "Set up a Mobile Broadband Connection"
 msgstr "Configuration d'une connexion mobile"
 
 #: src/libnma/nma-mobile-wizard.ui:189
-#, fuzzy
 msgid "Country or region:"
-msgstr "Pays ou région"
+msgstr "Pays ou région :"
 
 #: src/libnma/nma-mobile-wizard.ui:229 src/libnm-gtk/nm-mobile-wizard.c:1127
 msgid "Choose your Provider’s Country or Region"
@@ -4344,7 +4339,8 @@ msgid "Select your provider from a _list:"
 msgstr "Sélectionnez votre fournisseur dans la _liste :"
 
 #: src/libnma/nma-mobile-wizard.ui:289
-msgid "I can’t find my provider and I wish to set up the connection _manually:"
+msgid ""
+"I can’t find my provider and I wish to set up the connection _manually:"
 msgstr ""
 "Je ne trouve pas mon fournisseur et je souhaite configurer _manuellement la "
 "connexion :"
@@ -4651,7 +4647,7 @@ msgstr "USB"
 #. * "Ethernet"). You can change this to something like
 #. * "%2$s (%1$s)" if there's no grammatical way to combine
 #. * the strings otherwise.
-#.
+#. 
 #: src/libnm-gtk/nm-ui-utils.c:482 src/libnm-gtk/nm-ui-utils.c:502
 #, c-format
 msgctxt "long device name"
@@ -5099,12 +5095,3 @@ msgstr ""
 #: src/wireless-security/ws-wpa-psk.ui:48
 msgid "_Type"
 msgstr "_Type"
-
-#~ msgid "%s (default)"
-#~ msgstr "%s (par défaut)"
-
-#~ msgid "Ignored"
-#~ msgstr "Ignoré"
-
-#~ msgid "Active Network Connections"
-#~ msgstr "Connexions réseau actives"
