po: RHEL 8.1 translations
https://gitlab.gnome.org/GNOME/network-manager-applet/merge_requests/57

--- a/po/fr.po
+++ b/po/fr.po
@@ -12,21 +12,23 @@
 # Bruno Brouard <annoa.b@gmail.com>, 2010-2012.
 # Alain Lojewski <allomervan@gmail.com>, 2013-2014.
 # Yvan Masson <yvan.masson@openmailbox.org>, 2017.
-#
+# croe <croe@redhat.com>, 2019. #zanata
+# ljanda <ljanda@redhat.com>, 2019. #zanata
 msgid ""
 msgstr ""
-"Project-Id-Version: fr\n"
+"Project-Id-Version: network-manager-applet 1.8.22\n"
 "Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/network-manager-"
 "applet/\n"
-"POT-Creation-Date: 2019-05-29 10:49+0200\n"
-"PO-Revision-Date: 2019-01-15 14:51+0100\n"
-"Last-Translator: Claude Paroz <claude@2xlibre.net>\n"
+"POT-Creation-Date: 2019-08-15 18:52+0200\n"
+"PO-Revision-Date: 2019-08-14 11:37+0000\n"
+"Last-Translator: croe <croe@redhat.com>\n"
 "Language-Team: GNOME French TEAM <gnomefr@traduc.org>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n>1;\n"
+"X-Generator: Zanata 4.6.2\n"
 
 #: nm-applet.desktop.in:3 src/applet.c:3196 src/applet-dialogs.c:737
 #: src/libnma/nma-bar-code-widget.c:144
@@ -39,7 +41,7 @@ msgstr "Gérer vos connexions réseau"
 
 #: nm-applet.desktop.in:5
 msgid "nm-device-wireless"
-msgstr ""
+msgstr "nm-device-wireless"
 
 #: nm-connection-editor.desktop.in:3
 msgid "Advanced Network Configuration"
@@ -51,7 +53,7 @@ msgstr "Gérer et modifier les paramètres des connexions réseau"
 
 #: nm-connection-editor.desktop.in:5
 msgid "preferences-system-network"
-msgstr ""
+msgstr "preferences-system-network"
 
 #: org.gnome.nm-applet.gschema.xml.in:6
 msgid "Disable connected notifications"
@@ -108,7 +110,6 @@ msgstr ""
 "version."
 
 #: org.gnome.nm-applet.gschema.xml.in:31
-#, fuzzy
 msgid "Disable WiFi Create"
 msgstr "Désactiver la création Wi-Fi"
 
@@ -889,18 +890,16 @@ msgid "Subnet Mask"
 msgstr "Masque de sous-réseau "
 
 #: src/applet-dialogs.c:440
-#, fuzzy
 msgid "Primary DNS"
-msgstr "_Principal"
+msgstr "DNS Principal"
 
 #: src/applet-dialogs.c:440
-#, fuzzy
 msgid "Secondary DNS"
-msgstr "Mot de passe _secondaire :"
+msgstr "DNS Secondaire"
 
 #: src/applet-dialogs.c:440
 msgid "Tertiary DNS"
-msgstr ""
+msgstr "DNS Tertiaire"
 
 #: src/applet-dialogs.c:519
 #, c-format
@@ -948,9 +947,8 @@ msgid "Speed"
 msgstr "Vitesse "
 
 #: src/applet-dialogs.c:616
-#, fuzzy
 msgid "Security"
-msgstr "Sécurité :"
+msgstr "Sécurité"
 
 #. --- IPv4 ---
 #: src/applet-dialogs.c:641 src/applet-dialogs.c:904
@@ -972,9 +970,8 @@ msgid "Hotspot"
 msgstr "Hotspot"
 
 #: src/applet-dialogs.c:748 src/libnma/nma-bar-code-widget.c:161
-#, fuzzy
 msgid "Password"
-msgstr "Mot de passe :"
+msgstr "Mot de passe"
 
 #: src/applet-dialogs.c:878
 msgid "VPN Type"
@@ -4222,7 +4219,7 @@ msgstr "_Fermer"
 
 #: src/libnma/nma-bar-code-widget.ui:36
 msgid "Scan with your phone or <a href=\"nma:print\">Print</a>"
-msgstr ""
+msgstr "Scanner avec votre portable ou  <a href=\"nma:print\">Print</a>"
 
 #: src/libnma/nma-file-cert-chooser.c:108
 #: src/libnma/nma-pkcs11-cert-chooser.c:152
@@ -4331,9 +4328,8 @@ msgid "Set up a Mobile Broadband Connection"
 msgstr "Configuration d'une connexion mobile"
 
 #: src/libnma/nma-mobile-wizard.ui:189
-#, fuzzy
 msgid "Country or region:"
-msgstr "Pays ou région"
+msgstr "Pays ou région :"
 
 #: src/libnma/nma-mobile-wizard.ui:229 src/libnm-gtk/nm-mobile-wizard.c:1127
 msgid "Choose your Provider’s Country or Region"
@@ -5099,12 +5095,3 @@ msgstr ""
 #: src/wireless-security/ws-wpa-psk.ui:48
 msgid "_Type"
 msgstr "_Type"
-
-#~ msgid "%s (default)"
-#~ msgstr "%s (par défaut)"
-
-#~ msgid "Ignored"
-#~ msgstr "Ignoré"
-
-#~ msgid "Active Network Connections"
-#~ msgstr "Connexions réseau actives"
