--- a/po/ko.po
+++ b/po/ko.po
@@ -17,14 +17,14 @@
 #  - VPN은 "가상 사설망"으로 풀어서 번역
 #  - bond는 "본딩"으로 번역 (여러 네트워크를 묶어서 사용)
 #  - bridged network는 "브릿지 네트워크"로 번역
-# lrintel <lrintel@redhat.com>, 2017. #zanata
+# ljanda <ljanda@redhat.com>, 2019. #zanata
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: network-manager-applet 1.8.22\n"
 "Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/network-manager-"
 "applet/\n"
-"POT-Creation-Date: 2019-05-29 10:49+0200\n"
-"PO-Revision-Date: 2017-11-07 06:44+0000\n"
+"POT-Creation-Date: 2019-08-15 18:52+0200\n"
+"PO-Revision-Date: 2019-08-13 10:26+0000\n"
 "Last-Translator: Copied by Zanata <copied-by-zanata@zanata.org>\n"
 "Language-Team: GNOME Korea <gnome-kr@googlegroups.com>\n"
 "Language: ko\n"
@@ -32,7 +32,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Zanata 4.3.2\n"
+"X-Generator: Zanata 4.6.2\n"
 
 #: nm-applet.desktop.in:3 src/applet.c:3196 src/applet-dialogs.c:737
 #: src/libnma/nma-bar-code-widget.c:144
@@ -5159,44 +5159,3 @@ msgstr ""
 #, fuzzy
 msgid "_Type"
 msgstr "형식(_T):"
-
-#~ msgid "%s (default)"
-#~ msgstr "%s (기본값)"
-
-#~ msgid "Ignored"
-#~ msgstr "무시함"
-
-#~ msgid "Active Network Connections"
-#~ msgstr "사용 중인 네트워크 연결"
-
-#~ msgid "Failed to update connection secrets due to an unknown error."
-#~ msgstr "알려지지 않은 오류로 비밀 정보를 업데이트하는 데 실패했습니다."
-
-#~ msgid "Priority:"
-#~ msgstr "우선 순위:"
-
-#~ msgid "_Automatically connect to this network when it is available"
-#~ msgstr "사용 가능하면 자동으로 이 네트워크에 연결(_A)"
-
-#, fuzzy
-#~ msgid "Connection _priority for auto-activation:"
-#~ msgstr "연결 정보(_I)"
-
-#~ msgid "Cannot import VPN connection"
-#~ msgstr "가상 사설망 연결을 가져올 수 없음"
-
-#, fuzzy
-#~ msgid ""
-#~ "The file “%s” could not be read or does not contain recognized VPN "
-#~ "connection information\n"
-#~ "\n"
-#~ "Error: %s."
-#~ msgstr ""
-#~ "'%s' 파일을 읽을 수 없거나, 파일안에 알아볼 수 있는 가상 사설망 연결 정보"
-#~ "가 없습니다.\n"
-#~ "\n"
-#~ "오류: %s."
-
-#, fuzzy
-#~ msgid "unknown error"
-#~ msgstr "알 수 없는 오류"
