--- a/NEWS
+++ b/NEWS
@@ -3,8 +3,15 @@ network-manager-applet-1.8.24
 Overview of changes since network-manager-applet-1.8.22
 =======================================================
 
-* Add EXPERIMENTAL libnma-gtk4 library for use with GTK4.
-  Not recommended for production use.
+* Fixed external UI mode without interactive secrets.
+* Ad-Hoc networks now support WPA2 authentication.
+* Support for SAE authentication (WPA3 Personal) was added.
+* Fixed applet operation on graphical servers other than X11 (such as
+  Wayland).
+* Various other bug fixes and enhancements.
+* Added EXPERIMENTAL libnma-gtk4 library for use with GTK4.
+  Not recommended for production use!
+* Updated translations.
 
 =======================================================
 network-manager-applet-1.8.22
