all: lay libnm-gtk to rest
It's about time.

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,12 @@
 =======================================================
+network-manager-applet-1.8.25
+Overview of changes since network-manager-applet-1.8.24
+=======================================================
+
+* The libnm-gtk, the deprecated libnm-glib compatibility library was
+  removed. Everybody should be using libnma by now.
+
+=======================================================
 network-manager-applet-1.8.24
 Overview of changes since network-manager-applet-1.8.22
 =======================================================
