Update Polish translation

--- a/po/pl.po
+++ b/po/pl.po
@@ -10,10 +10,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: network-manager-applet\n"
-"Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/network-manager-"
-"applet/\n"
-"POT-Creation-Date: 2019-10-09 15:43+0200\n"
-"PO-Revision-Date: 2019-06-30 15:42+0200\n"
+"Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/network-manager-applet/"
+"issues\n"
+"POT-Creation-Date: 2019-10-09 13:58+0000\n"
+"PO-Revision-Date: 2019-10-10 13:25+0200\n"
 "Last-Translator: Piotr Drąg <piotrdrag@gmail.com>\n"
 "Language-Team: Polish <community-poland@mozilla.org>\n"
 "Language: pl\n"
@@ -838,7 +838,7 @@ msgstr "WEP"
 
 #: src/applet-dialogs.c:230
 msgid "WPA3"
-msgstr ""
+msgstr "WPA3"
 
 #: src/applet-dialogs.c:234 src/applet-dialogs.c:243
 #: src/connection-editor/page-wifi-security.c:320
@@ -4123,9 +4123,8 @@ msgstr "WPA i WPA2 Enterprise"
 
 #: src/connection-editor/page-wifi-security.c:421
 #: src/libnma/nma-wifi-dialog.c:1024
-#, fuzzy
 msgid "WPA3 Personal"
-msgstr "WPA i WPA2 Personal"
+msgstr "WPA3 Personal"
 
 #: src/connection-editor/page-wifi-security.c:464
 msgid "Could not load Wi-Fi security user interface; missing Wi-Fi setting."
@@ -4990,9 +4989,8 @@ msgid "missing leap-password"
 msgstr "brak „leap-password”"
 
 #: src/wireless-security/ws-sae.c:57
-#, fuzzy
 msgid "missing password"
-msgstr "brak hasła EAP"
+msgstr "brak hasła"
 
 #: src/wireless-security/ws-sae.ui:48 src/wireless-security/ws-wpa-psk.ui:48
 msgid "_Type"
