--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,9 @@
 =======================================================
-network-manager-applet-1.8.25
+network-manager-applet-1.8.26
 Overview of changes since network-manager-applet-1.8.24
 =======================================================
 
+* Turned libnma into an external dependency.
 * The libnm-gtk, the deprecated libnm-glib compatibility library was
   removed. Everybody should be using libnma by now.
 
