Fixx to Spanish translation

--- a/po/es.po
+++ b/po/es.po
@@ -348,7 +348,7 @@ msgid ""
 "The VPN connection “%s” failed because the VPN service failed to start."
 msgstr ""
 "\n"
-"La conexión VPN «%s» ha fallado porque el servició VPN no pudo iniciarse."
+"La conexión VPN «%s» ha fallado porque el servicio VPN no pudo iniciarse."
 
 #: src/applet.c:898
 #, c-format
