--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,11 @@
 =======================================================
+network-manager-applet-1.18.0
+Overview of changes since network-manager-applet-1.16.0
+=======================================================
+
+* Enable build with appindicator by default.
+
+=======================================================
 network-manager-applet-1.16.0
 Overview of changes since network-manager-applet-1.8.24
 =======================================================
