--- a/po/lt.po
+++ b/po/lt.po
@@ -5,15 +5,15 @@
 # Gintautas Miliauskas <gintas@akl.lt>, 2008.
 # Rimas Kudelis <rq@akl.lt>, 2010.
 # Algimantas Margevičius <gymka@mail.ru>, 2011.
-# Aurimas Černius <aurisc4@gmail.com>, 2010-2018.
+# Aurimas Černius <aurisc4@gmail.com>, 2010-2020.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: NetworkManager HEAD\n"
-"Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/network-manager-"
-"applet/\n"
-"POT-Creation-Date: 2020-03-06 23:05+0100\n"
-"PO-Revision-Date: 2018-12-08 14:39+0200\n"
+"Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/network-manager-applet/"
+"issues\n"
+"POT-Creation-Date: 2020-03-29 15:38+0000\n"
+"PO-Revision-Date: 2020-04-13 22:53+0300\n"
 "Last-Translator: Aurimas Černius <aurisc4@gmail.com>\n"
 "Language-Team: Lietuvių <gnome-lt@lists.akl.lt>\n"
 "Language: lt\n"
@@ -21,8 +21,8 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n"
-"%100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Generator: Gtranslator 3.30.1\n"
+"%100<10 || n%100>=20) ? 1 : 2)\n"
+"X-Generator: Gtranslator 3.34.0\n"
 "X-Project-Style: gnome\n"
 
 #: nm-applet.desktop.in:3 src/applet-dialogs.c:724 src/applet.c:3179
@@ -35,7 +35,7 @@ msgstr "Tvarkyti tinklo ryšius"
 
 #: nm-applet.desktop.in:5
 msgid "nm-device-wireless"
-msgstr ""
+msgstr "nm-device-wireless"
 
 #: nm-connection-editor.appdata.xml.in:7
 msgid "NetworkManager"
@@ -75,7 +75,7 @@ msgstr "Tvarkykite ir keiskite savo tinklo ryšių nustatymus"
 
 #: nm-connection-editor.desktop.in:5
 msgid "preferences-system-network"
-msgstr ""
+msgstr "preferences-system-network"
 
 #: shared/nm-utils/nm-shared-utils.c:793
 #, c-format
@@ -450,7 +450,7 @@ msgstr "WEP"
 
 #: src/applet-dialogs.c:230
 msgid "WPA3"
-msgstr ""
+msgstr "WPA3"
 
 #: src/applet-dialogs.c:234 src/applet-dialogs.c:243
 #: src/connection-editor/page-wifi-security.c:320
@@ -493,18 +493,16 @@ msgid "Subnet Mask"
 msgstr "Potinklio kaukė"
 
 #: src/applet-dialogs.c:428
-#, fuzzy
 msgid "Primary DNS"
-msgstr "_Pirminis"
+msgstr "Pirminis DNS"
 
 #: src/applet-dialogs.c:428
-#, fuzzy
 msgid "Secondary DNS"
-msgstr "_Antrinis slaptažodis:"
+msgstr "Antrinis DNS"
 
 #: src/applet-dialogs.c:428
 msgid "Tertiary DNS"
-msgstr ""
+msgstr "Tretinis DNS"
 
 #: src/applet-dialogs.c:507
 #, c-format
@@ -552,9 +550,8 @@ msgid "Speed"
 msgstr "Sparta"
 
 #: src/applet-dialogs.c:604
-#, fuzzy
 msgid "Security"
-msgstr "Sauga:"
+msgstr "Sauga"
 
 #. --- IPv4 ---
 #: src/applet-dialogs.c:629 src/applet-dialogs.c:891
@@ -576,9 +573,8 @@ msgid "Hotspot"
 msgstr "Prieigos taškas"
 
 #: src/applet-dialogs.c:735
-#, fuzzy
 msgid "Password"
-msgstr "Slaptažodis:"
+msgstr "Slaptažodis"
 
 #: src/applet-dialogs.c:865
 msgid "VPN Type"
@@ -2054,18 +2050,16 @@ msgid "Strict"
 msgstr "Griežtas"
 
 #: src/connection-editor/ce-page-macsec.ui:58
-#, fuzzy
 msgid "_Device name"
-msgstr "Įrenginio pavadinimas"
+msgstr "Į_renginio pavadinimas"
 
 #: src/connection-editor/ce-page-macsec.ui:71
 msgid "The name of the MACsec device."
 msgstr "MACsec įrenginio pavadinimas."
 
 #: src/connection-editor/ce-page-macsec.ui:85
-#, fuzzy
 msgid "_Parent device"
-msgstr "Tėvinis įrenginys"
+msgstr "_Tėvinis įrenginys"
 
 #: src/connection-editor/ce-page-macsec.ui:98
 msgid ""
@@ -2088,9 +2082,8 @@ msgid "Keys"
 msgstr "Raktai"
 
 #: src/connection-editor/ce-page-macsec.ui:135
-#, fuzzy
 msgid "_Mode"
-msgstr "Veiksena"
+msgstr "_Veiksena"
 
 #: src/connection-editor/ce-page-macsec.ui:148
 msgid ""
@@ -2104,7 +2097,7 @@ msgstr ""
 
 #: src/connection-editor/ce-page-macsec.ui:168
 msgid "C_AK"
-msgstr ""
+msgstr "C_AK"
 
 #: src/connection-editor/ce-page-macsec.ui:181
 msgid "The pre-shared Connectivity Association Key"
@@ -2112,7 +2105,7 @@ msgstr "Iš anksto bendrinamas „Connectivity Association Key“ raktas"
 
 #: src/connection-editor/ce-page-macsec.ui:193
 msgid "C_KN"
-msgstr ""
+msgstr "C_KN"
 
 #: src/connection-editor/ce-page-macsec.ui:206
 msgid " The pre-shared Connectivity-association Key Name"
@@ -2123,27 +2116,24 @@ msgid "Parameters"
 msgstr "Parametrai"
 
 #: src/connection-editor/ce-page-macsec.ui:234
-#, fuzzy
 msgid "_Validation"
-msgstr "Tikrinimas"
+msgstr "_Tikrinimas"
 
 #: src/connection-editor/ce-page-macsec.ui:247
 msgid "Specifies the validation mode for incoming frames"
 msgstr "Nustato gaunamųjų kadrų tikrinimo veikseną"
 
 #: src/connection-editor/ce-page-macsec.ui:266
-#, fuzzy
 msgid "_SCI port"
-msgstr "SCI prievadas"
+msgstr "_SCI prievadas"
 
 #: src/connection-editor/ce-page-macsec.ui:279
 msgid "The port component of the SCI (Secure Channel Identifier)"
 msgstr "SCI (Secure Channel Identifier) prievado komponentas"
 
 #: src/connection-editor/ce-page-macsec.ui:291
-#, fuzzy
 msgid "_Encrypt"
-msgstr "Šifruoti"
+msgstr "Ši_fruoti"
 
 #: src/connection-editor/ce-page-macsec.ui:296
 msgid "Whether the transmitted traffic must be encrypted"
@@ -3963,9 +3953,8 @@ msgid "WPA & WPA2 Enterprise"
 msgstr "WPA ir WPA2 industrinis"
 
 #: src/connection-editor/page-wifi-security.c:421
-#, fuzzy
 msgid "WPA3 Personal"
-msgstr "WPA ir WPA2 asmeninis"
+msgstr "WPA3 asmeninis"
 
 #: src/connection-editor/page-wifi-security.c:464
 msgid "Could not load Wi-Fi security user interface; missing Wi-Fi setting."
@@ -4412,9 +4401,8 @@ msgid "missing leap-password"
 msgstr "trūksta leap-password"
 
 #: src/wireless-security/ws-sae.c:56
-#, fuzzy
 msgid "missing password"
-msgstr "trūksta EAP slaptažodžio"
+msgstr "trūksta slaptažodžio"
 
 #: src/wireless-security/ws-sae.ui:48 src/wireless-security/ws-wpa-psk.ui:48
 msgid "_Type"
@@ -4580,23 +4568,18 @@ msgstr ""
 #~ msgid "No key set"
 #~ msgstr "Nenustatytas joks raktas"
 
-#, c-format
 #~ msgid "Choose a key for %s Certificate"
 #~ msgstr "Pasirinkite raktą, skirtą %s liudijimui"
 
-#, c-format
 #~ msgid "%s private _key"
 #~ msgstr "%s privatusis ra_ktas"
 
-#, c-format
 #~ msgid "%s key _password"
 #~ msgstr "%s rakto sla_ptažodis"
 
-#, c-format
 #~ msgid "Choose %s Certificate"
 #~ msgstr "Pasirinkite %s liudijimą"
 
-#, c-format
 #~ msgid "%s _certificate"
 #~ msgstr "%s _liudijimas"
 
@@ -4730,11 +4713,9 @@ msgstr ""
 #~ msgid "(None)"
 #~ msgstr "(Nėra)"
 
-#, c-format
 #~ msgid "Key in %s"
 #~ msgstr "Raktas, esantis %s"
 
-#, c-format
 #~ msgid "Certificate in %s"
 #~ msgstr "Liudijimas, esantis %s"
 
@@ -4750,11 +4731,9 @@ msgstr ""
 #~ msgid "Select from file…"
 #~ msgstr "Pasirinkti iš failo…"
 
-#, c-format
 #~ msgid "Choose a %s Certificate"
 #~ msgstr "Pasirinkite %s liudijimą"
 
-#, c-format
 #~ msgid "%s certificate _password"
 #~ msgstr "%s liudijimo sla_ptažodis"
 
@@ -4770,7 +4749,6 @@ msgstr ""
 #~ msgid "Issued By"
 #~ msgstr "Išdavė"
 
-#, c-format
 #~ msgid "Enter %s PIN"
 #~ msgstr "Įveskite %s PIN"
 
@@ -4820,7 +4798,6 @@ msgstr ""
 #~ msgid "C_reate"
 #~ msgstr "Suku_rti"
 
-#, c-format
 #~ msgid ""
 #~ "Passwords or encryption keys are required to access the Wi-Fi network "
 #~ "“%s”."
@@ -4892,7 +4869,6 @@ msgstr ""
 #~ msgid "USB"
 #~ msgstr "USB"
 
-#, c-format
 #~ msgctxt "long device name"
 #~ msgid "%s %s"
 #~ msgstr "%s %s"
