--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,9 @@ Overview of changes since network-manager-applet-1.16.0
 =======================================================
 
 * Enable build with appindicator by default.
+* Add WireGuard support to the editor.
+* Support OWE (Opportunistic Wireless Encryption) in the editor.
+* Fix crash when disposing VPN secret dialog.
 
 =======================================================
 network-manager-applet-1.16.0
