Update Catalan translation

--- a/po/ca.po
+++ b/po/ca.po
@@ -2107,7 +2107,7 @@ msgid ""
 msgstr ""
 "Especifica com la CAK (Clau d'associació connectivitat) s'obté per la MKA "
 "(Clau d'acord MACsec). Per al mode EAP, ompliu els paràmetres a la pàgina de"
-" seguretat 802.1X "
+" seguretat 802.1X"
 
 #: src/connection-editor/ce-page-macsec.ui:168
 msgid "C_AK"
@@ -2972,7 +2972,7 @@ msgstr "La clau privada de 256 bits en codificació base64"
 
 #: src/connection-editor/ce-page-wireguard.ui:429
 msgid "_Listen port"
-msgstr "_Port on s'escolta:"
+msgstr "_Port on s'escolta"
 
 #: src/connection-editor/ce-page-wireguard.ui:442
 msgid ""
@@ -3897,7 +3897,7 @@ msgstr "Servidor DNS IPv6 «%s» no vàlid"
 
 #: src/connection-editor/page-macsec.c:175
 msgid "Could not load MACsec user interface."
-msgstr "No s'ha pogut carregar la interfície d'usuari per MACsec."
+msgstr "No s'ha pogut carregar la interfície d'usuari per MACsec"
 
 #: src/connection-editor/page-macsec.c:314
 #, c-format
