Update Catalan translation

--- a/po/ca.po
+++ b/po/ca.po
@@ -2036,7 +2036,7 @@ msgstr "Mode de _generació d'adreça IPv6"
 
 #: src/connection-editor/ce-page-ip6.ui:356
 msgid "Require IPv_6 addressing for this connection to complete"
-msgstr "Cal l'adreçament IPv_6 per completar la connexió"
+msgstr "Cal l'adreçament IPv_6 per a completar la connexió"
 
 #: src/connection-editor/ce-page-ip6.ui:360
 msgid ""
@@ -2089,7 +2089,7 @@ msgid ""
 "interface should be created"
 msgstr ""
 "El nom de la interfície pare o connexió UUID pare des d'on s'ha de crear la "
-"interfície MACsec."
+"interfície MACsec"
 
 #: src/connection-editor/ce-page-macsec.ui:117
 msgid "Keys"
