Update Catalan translation

--- a/po/ca.po
+++ b/po/ca.po
@@ -1987,7 +1987,7 @@ msgid ""
 "IP addresses of domain name servers used to resolve host names. Use commas "
 "to separate multiple domain name server addresses."
 msgstr ""
-"Adreces IP dels servidors de nom de domini utilitzats per resoldre els noms "
+"Adreces IP dels servidors de nom de domini utilitzats per a resoldre els noms "
 "d'amfitrió. Utilitzeu la coma per a separar múltiples adreces de servidor de "
 "nom de domini."
 
@@ -2036,7 +2036,7 @@ msgid ""
 "to separate multiple domain name server addresses. Link-local addresses will "
 "be automatically scoped to the connecting interface."
 msgstr ""
-"Les adreces IP dels servidors de nom de domini utilitzats per resoldre els "
+"Les adreces IP dels servidors de nom de domini utilitzats per a resoldre els "
 "noms d'amfitrió. Utilitzeu la coma per a separar múltiples adreces de "
 "servidor de nom de domini. Les adreces «Link-local» s'inclouran a l'àmbit de "
 "la interfície de connexió."
@@ -3460,7 +3460,7 @@ msgid ""
 "The following files are not labelled for use with certificate "
 "authentication. Do you wish to adjust the labels?"
 msgstr ""
-"Els següents fitxers no estan etiquetats per usar amb certificats "
+"Els següents fitxers no estan etiquetats per a usar amb certificats "
 "autenticats. Voleu ajustar les etiquetes?"
 
 #: src/connection-editor/nm-connection-editor.ui:347
@@ -3906,7 +3906,7 @@ msgstr "Servidor DNS IPv6 «%s» no vàlid"
 
 #: src/connection-editor/page-macsec.c:175
 msgid "Could not load MACsec user interface."
-msgstr "No s'ha pogut carregar la interfície d'usuari per MACsec"
+msgstr "No s'ha pogut carregar la interfície d'usuari per MACsec."
 
 #: src/connection-editor/page-macsec.c:314
 #, c-format
